--- a/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.html
+++ b/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.html
@@ -9,19 +9,18 @@
 
 <ion-content>
   <ion-grid>
-    <ion-row  *ngFor="let user of users">
-      <ion-col size="9" *ngIf="currentUser !== user.userName" class="message other-message">
-        <b>{{user.userName}}</b><br>
-        <b>{{user.msg}}</b>
-        <div class="time" text-right><br>
+    <ion-row  *ngFor="let user of loginUser">
+      <ion-col size="12" *ngIf="user.vaildUser == false" class="message other-message">
+        <b class="nameFont">{{user.userName}}</b><br>
+        <b class="msgFont">{{user.msg}}</b>
+        <div class="time"><br>
           {{user.createdAt | date:'short'}}
         </div>
       </ion-col>
-
-      <ion-col offset="3" size="9" *ngIf="currentUser === user.userName" class="message my-message">
-        <b>{{user.userName}}</b><br>
-        <b>{{user.msg}}</b>
-        <div class="time" text-right><br>
+      <ion-col  size="12" *ngIf="user.vaildUser == true" class="message my-message">
+        <b class="nameFont">{{user.userName}}</b><br>
+        <b class="msgFont">{{user.msg}}</b>
+        <div class="time"><br>
           {{user.createdAt | date:'short'}}
         </div>
       </ion-col>
@@ -30,10 +29,10 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="light">
+  <ion-toolbar Color="light" style="border: 2px solid #58B2DC ;">
     <ion-row align-items-center no-padding>
       <ion-col size="10">
-        <textarea autosize maxRows="4" [(ngModel)]="newMsg" class="message-input"></textarea>
+        <textarea autosize maxRows="4" [(ngModel)]="newMsg" class="message-input" placeholder="分享您的旅程?" style="font-size: 20px;" (click)="openPopover($event)"></textarea>
       </ion-col>
       <ion-col size="2">
      <ion-button expand = "block" fill = "clear" color="primary" [disabled]="newMsg ===''"class="msg-btn" (click)="sendMsg()">
