--- a/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
+++ b/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
@@ -14,17 +14,15 @@ margin-bottom: 4px;
 white-space: pre-wrap;
 }
 .other-message{
-background: var(--ion-color-tertiary);
-color: white;
+    background-color: #BDC0BA;
 }
 .my-message{
-    background: var(--ion-color-secondary);
-    color: white;
+    background-color: #91989F;
 }
 .time{
-color: white;
+color: black;
 float:right;
-font-size: small;
+font-size: 14px;
 }
 .msg-btn{
 --padding-start:0.5em;
@@ -38,4 +36,16 @@ font-size: small;
     resize: none;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: 5px;
+}
+.nameFont{
+    font-size: 22px;
+    color:black;
+    font-weight: bold;
+}
+.msgFont{
+    font-size: 18px;
+    margin-top: 10px;
+    color: #1C1C1C;
+
 }
