--- a/src/app/signin/signin.page.html
+++ b/src/app/signin/signin.page.html
@@ -36,7 +36,7 @@
   <div style="text-align: center;">
     <nobr>
       <button id="btnRegister" (click)="signupPage()">註冊</button>
-      <button class="btnForget">忘記密碼</button>
+      <button class="btnForget"(click)="forgotPage()">忘記密碼</button>
     </nobr>
   </div>
   <br>
