--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding">
   <div style="text-align: center; padding-left: 200px;">
-    <img src="/assets/Img/flyninja.png" style="width: 100px;height: 100px;background: none;"></div>
+    <img src="/assets/Img/flyninja.png" style="width: 100px;height: 100px;"></div>
     <h4 id="title" style="background: none;">註冊</h4>
   <div id="userName1">
     <span style="padding-right: 120px;">
@@ -47,6 +47,6 @@
     <button id="signupBtn" (click)="signup()">註冊</button>
   </div>
   <div style="text-align: center; padding-top: 20px;">
-    <button id="conBtn"(click)="back()">取消</button>
+    <button id="cancelBtn"(click)="back()">取消</button>
   </div>
 </ion-content>
