--- a/src/app/forgot-pwd/forgot-pwd.page.html
+++ b/src/app/forgot-pwd/forgot-pwd.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
 
   <div style=" text-align: center;">
     <h4 id="title">忘記密碼</h4>
