--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content [fullscreen]="true" class="ion-padding">
   <div style="text-align: center; padding-left: 200px;">
     <img src="/assets/Img/flyninja.png" style="width: 100px;height: 100px;"></div>
     <h4 id="title" style="background: none;">註冊</h4>
