--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -3,37 +3,29 @@
     <ion-title style="text-align:center;">JAPAN景點</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" >
   <div style=" text-align: center;" *ngIf="userService.vaildUser === false">
     <img src="/assets/Img/kouyo.png" id="imgA">
     <div>
       <button  id="tabT" (click)="signin()">前往登入會員</button>
     </div>
   </div>
-  <div  *ngFor="let User of User" style="padding-top: 30px;">
-    <ion-avatar *ngIf="User.vaildUser && !User.imageSrc ">
-      <img src="/assets/Img/noimg.png">
-    </ion-avatar>
-    <ion-avatar *ngIf="User.vaildUser && User.imageSrc">
-      <img src="{{User.imageSrc}}">
+  <div  *ngFor="let User of User" style="padding-top: 30px;z-index: 2;" >
+    <ion-card  >
+    <ion-avatar *ngIf="User.vaildUser" style="margin-top: 25px;">
+      <img *ngIf="User.vaildUser && !User.imageSrc " src="/assets/Img/noimg.png">
+      <img *ngIf="User.vaildUser && User.imageSrc" src="{{User.imageSrc}}">
     </ion-avatar>
     <h6 class="userName" *ngIf="User.vaildUser">{{User.userName}}</h6>
-  </div>
-  <div *ngFor="let User of User">
-    <div style="text-align: center;"*ngIf="User.vaildUser">
-      <button class="memberBtn">修改會員資料</button>
-    </div>
-    <br>
-    <div style="padding-top: 20px; text-align: center;"*ngIf="User.vaildUser">
-      <button class="memberBtn">瀏覽紀錄</button>
-    </div>
+    <h4 class="userEmail" *ngIf="User.vaildUser">信箱:{{User.Email}}</h4>
+    <div style="text-align: center; margin-bottom: 15px;margin-top: 15px;"*ngIf="User.vaildUser">
+      <button class="memberBtn" (click)=" modify()">修改會員資料</button></div>
+  </ion-card>
   <div style="text-align: center;" *ngIf="User.vaildUser">
     <button id="logOut" (click) = "logOut()">登出</button>
   </div>
   <div id="travelImg"*ngIf="User.vaildUser" >
-      <img src="/assets/Img/travel2.png">
+    <img src="/assets/Img/travel2.png">
   </div>
-</div>
-
-
+  </div>
 </ion-content>
