camera&Photo choose

--- a/src/app/modify/modify.page.html
+++ b/src/app/modify/modify.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true">
 
-    <ion-list lines="full" class="ion-no-margin" *ngFor = "let user of Users">
+    <ion-list lines="full"  *ngFor = "let user of Users">
       <ion-list-header lines="full" *ngIf ="user.vaildUser">
         <ion-label id="title">
           修改會員資料
@@ -18,7 +18,7 @@
           <img *ngIf="user.vaildUser && user.imageSrc" src="{{user.imageSrc}}">
         </ion-avatar></div>
         <div style="text-align: center;padding-top: 5px;" *ngIf="user.vaildUser">
-          <button id="photoBtn">更換頭貼</button>
+          <button id="photoBtn" (click)="selectImageSource()">更換頭貼</button>
         </div>
       <ion-item *ngIf ="user.vaildUser">
         <ion-label class="itemlabel">姓名</ion-label>
@@ -29,7 +29,7 @@
         <ion-input class="itemInput"  type="Email" placeholder="{{user.Email}}" [(ngModel)]="Email"></ion-input>
       </ion-item>
       <div style="text-align:right;padding-top: 10px;" *ngIf="user.vaildUser">
-        <button id="pwdBtn">更改密碼</button>
+        <button id="pwdBtn" (click)="changePwd()">更改密碼</button>
       </div>
       <div style="text-align: center; padding-top: 50px;"*ngIf ="user.vaildUser">
         <button id="modifyBtn">確定</button>
@@ -41,15 +41,3 @@
  
 
 </ion-content>
-<!--  <ion-item *ngIf ="user.vaildUser">
-        <ion-label class="itemlabel">舊密碼</ion-label>
-        <ion-input class="itemInput"  type="password"  [(ngModel)]="password"></ion-input>
-      </ion-item>
-      <ion-item *ngIf ="user.vaildUser">
-        <ion-label class="itemlabel">新密碼</ion-label>
-        <ion-input class="itemInput"  type="password"  [(ngModel)]="newPwd"></ion-input>
-      </ion-item>
-      <ion-item *ngIf ="user.vaildUser">
-        <ion-label class="itemlabel">確認新密碼</ion-label>
-        <ion-input class="itemInput"  type="password"  [(ngModel)]="newPwdCheck"></ion-input>
-      </ion-item>-->
