--- a/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.html
+++ b/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.html
@@ -13,7 +13,8 @@
     <button id="starBtn" *ngFor="let r of ratingArr; index as i" (click)="onClick(i)">
       <ion-icon name="{{returnStar(i)}}" style="width: 25px;height:25px; color:#FFB11B"></ion-icon>
     </button>
-    <button id="shareBtn" (click) = "showBoard(attractionOne)">旅客心得分享</button>
+    <span style="float: right;margin-top: 10px;">
+    <button id="shareBtn" (click) = "showBoard(attractionOne)">旅客心得分享</button></span>
   </div>
   <div>
     <h4 class="aTitle">{{(attractionOne ? attractionOne.Name : '')}}<ion-buttons style="float: right;">
