--- a/src/app/forgot-pwd/forgot-pwd.page.scss
+++ b/src/app/forgot-pwd/forgot-pwd.page.scss
@@ -5,9 +5,10 @@ ion-content{
     --background:white;
 }
 ion-title{
+    text-align: center;
     color: white;
     font-weight: bolder;
-    font-size:x-large;
+    font-size:20px;
 }
 #imgA{
     padding-top: 50px;
