--- a/src/app/modify/change-pwd/change-pwd.page.scss
+++ b/src/app/modify/change-pwd/change-pwd.page.scss
@@ -2,11 +2,12 @@ ion-toolbar{
     --background:#6C6024
 }
 ion-title{
-    
+    text-align: center;
     color: white;
     font-weight: bolder;
-    font-size:x-large;
-    text-align:center;
+    font-size:20px;
+   padding-right: 20%;
+  
 }
 #title{
     text-align: center;
