--- a/src/app/modify/modify.page.scss
+++ b/src/app/modify/modify.page.scss
@@ -2,10 +2,10 @@ ion-toolbar{
     --background:#6C6024
 }
 ion-title{
-    
+    text-align: center;
     color: white;
     font-weight: bolder;
-    font-size:x-large;
+    font-size:20px;
 }
 #title{
     text-align: center;
