--- a/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.html
+++ b/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar *ngIf="attractionOne">
     <ion-buttons slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button text="" color="light" text=""style="display: inline;"></ion-back-button>
     </ion-buttons>
     <ion-title>留言板({{attractionOne.Name}})</ion-title>
   </ion-toolbar>
