--- a/src/app/modify/change-pwd/change-pwd.page.html
+++ b/src/app/modify/change-pwd/change-pwd.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button color="light" text="" style="display: inline;"></ion-back-button>
     </ion-buttons>
     <ion-title>JAPAN景點</ion-title>
   </ion-toolbar>
