--- a/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.html
+++ b/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button color="light" text=""style="display: inline;"></ion-back-button>
     </ion-buttons>
     <ion-title style="text-align:center;">東京都</ion-title>
   </ion-toolbar>
