--- a/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
+++ b/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
@@ -2,10 +2,12 @@ ion-toolbar{
     --background:#F75C2F
 }
 ion-title{
-    
+    text-align: center;
     color: white;
     font-weight: bolder;
     font-size:20px;
+   padding-right: 20%;
+  
 }
 .message{
 padding: 10px;
