--- a/src/app/forgot-pwd/forgot-pwd.page.html
+++ b/src/app/forgot-pwd/forgot-pwd.page.html
@@ -12,8 +12,8 @@
   </div>
   <form #form="ngForm" (ngSubmit)="resetPassword(form)">
     <div style="text-align: center;">
-      <input type="email" id="email" name="email" size="30" placeholder="請輸入Email" ngModel required
-        style="height: 50px; background-color: white; border-radius: 5px;">
+      <input type="email" id="email" name="email" size="35" placeholder="請輸入Email" ngModel required
+        style="height: 50px; background-color: #BDC0BA; border-radius: 30px;border: none;">
     </div>
     <br>
     <div style="text-align: center;margin: auto;">
