--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,9 +1,7 @@
-ion-toolbar{
-    --background:#6C6024
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
 }
@@ -21,8 +19,7 @@ ion-icon{
    
 }
 #tabT{
-    padding-left: 25px;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: bolder;
-    color:red ;
+    color:gray ;
 }
