--- a/src/app/forgot-pwd/forgot-pwd.page.scss
+++ b/src/app/forgot-pwd/forgot-pwd.page.scss
@@ -1,12 +1,7 @@
-ion-toolbar{
-    --background:#6C6024;
-}
-ion-content{
-    --background:white;
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
 }
@@ -15,27 +10,29 @@ ion-title{
     width: 200px;
 }
 #EmailBtn{
-    width: 200px;
-    height: 50px; 
+    width: 320px;
+    height: 45px; 
     border-radius:30px;
-    font-size: 30px;
-    background-color:#6C6024 ;
+    font-size: 18px;
+    background-color:#66BAB7 ;
     font-weight: bolder;
+    font-family: sans-serif;
     color: white;
+    margin-top: 15px;
 }
 #title{
     text-align: center;
-    font-size: 40px;
+    font-size: 48px;
     font-weight: bolder;
-    padding-top: 100px;
-    color: 	#6C6024
+    padding-top: 25px;
+    color: 	#0C0C0C
 
 }
 #cancelBtn{
-    width: 200px;
-    height: 50px; 
+    width: 320px;
+    height: 45px; 
     border-radius:30px;
-    font-size: 30px;
+    font-size: 18px;
     font-weight: bolder;
     color: red;
     background-color: white;
