--- a/src/app/signin/signin.page.scss
+++ b/src/app/signin/signin.page.scss
@@ -1,25 +1,18 @@
-ion-toolbar{
-    --background:#6C6024;
-}
-ion-content{
-    --background:white;
-}
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
 }
 #title{
     text-align: center;
-    font-size: 40px;
+    font-size: 48px;
     font-weight: bolder;
-    padding-top: 25px;
-    color: 	#6C6024
+    color: 	#0C0C0C
 }
 #account{
     text-align: center;
-    padding-top: 50px;
+    padding-top: 30px;
 }
 #pwd{
     text-align: center;
@@ -59,11 +52,12 @@ ion-title{
     text-align: center;
 }
 #LoginBtn{
-    width: 200px;
-    height: 50px; 
+    width: 320px;
+    height: 45px; 
     border-radius:30px;
-    font-size: 30px;
-    background-color:#6C6024 ;
+    font-size: 18px;
+    background-color:#66BAB7 ;
     font-weight: bolder;
+    font-family: sans-serif;
     color: white;
 }
