--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -5,40 +5,24 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
-  <div style="text-align: center; padding-left: 200px;">
-    <img src="/assets/Img/flyninja.png" style="width: 100px;height: 100px;"></div>
-    <h4 id="title" style="background: none;">註冊</h4>
+  <span style="display: inline-block;margin-left: 60%;">
+    <img src="/assets/Img/flyninja.png" style="width: 100px;height: 100px;"></span>
+    <h4 id="title" style="background: none;margin-top: 0px;">註冊</h4>
   <div id="userName1">
-    <span style="padding-right: 120px;">
-      <label style="font-size: 20px; font-weight: bold; color: #272727;">請輸入使用者名稱:</label>
-    </span>
-    <br>
-    <input type="text" id="userName" size="30" placeholder="王小明"
-      style="height: 30px; background-color: white; border-radius: 5px;">
+    <input type="text" id="userName" size="35" placeholder="使用者名稱"
+    style="height: 45px; background-color: #BDC0BA; border-radius: 25px;border: none;">
   </div>
   <div id="account">
-    <span style="padding-right: 120px;">
-      <label style="font-size: 20px; font-weight: bold; color: #272727;">請輸入Email信箱:</label>
-    </span>
-    <br>
-    <input type="email" id="email" name="email" size="30" placeholder="12345@example.com" [(ngModel)]="userEmail"
-      style="height: 30px; background-color: white; border-radius: 5px;">
+    <input type="email" id="email" name="email" size="35" placeholder="Email信箱" [(ngModel)]="userEmail"
+    style="height: 45px; background-color: #BDC0BA; border-radius: 25px;border: none;">
   </div>
   <div id="pwd">
-    <span style="padding-right: 175px;">
-      <label style="font-size: 20px; font-weight: bold; color: #272727;">請輸入密碼:</label>
-    </span>
-    <br>
-    <input type="password" name="pwd" size="30" placeholder="輸入密碼" [(ngModel)]="pwd"
-      style="height: 30px; background-color: white; border-radius: 5px;">
+    <input type="password" name="pwd" size="35" placeholder="密碼" [(ngModel)]="pwd"
+    style="height: 45px; background-color: #BDC0BA; border-radius: 25px;border: none;">
   </div>
   <div id="pwdC">
-    <span style="padding-right: 200px;">
-      <label style="font-size: 20px; font-weight: bold; color: #272727;">確認密碼:</label>
-    </span>
-    <br>
-    <input type="password" name="pwd" size="30" placeholder="確認密碼" [(ngModel)]="pwdCheck"
-      style="height: 30px; background-color: white; border-radius: 5px;">
+    <input type="password" name="pwd" size="35" placeholder="確認密碼" [(ngModel)]="pwdCheck"
+    style="height: 45px; background-color: #BDC0BA; border-radius: 25px;border: none;">
   </div>
   <div style="text-align: center;">
     <label *ngIf="!samePwd" style="color: #AE0000;text-shadow: 0.1em 3px 6px red; font-size: large;padding-left: 200px; font-weight: bolder;">密碼不一致</label>
