--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -1,25 +1,21 @@
-ion-toolbar{
-    --background:#6C6024;
-}
-ion-content{
-    --background:white;
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
 }
 #title{
     text-align: center;
-    font-size: 40px;
+    font-size: 48px;
     font-weight: bolder;
     padding-top: 25px;
-    color: 	#6C6024
+    color: 	#0C0C0C;
 }
 #userName1{
     text-align: center;
     padding-top: 20px;
+    
 }
 #account{
     text-align: center;
@@ -34,19 +30,20 @@ ion-title{
     padding-top: 20px;
 }
 #signupBtn{
-    width: 200px;
-    height: 50px; 
+    width: 320px;
+    height: 45px; 
     border-radius:30px;
-    font-size: 30px;
-    background-color:#6C6024 ;
+    font-size: 18px;
+    background-color:#66BAB7 ;
     font-weight: bolder;
+    font-family: sans-serif;
     color: white;
 }
 #cancelBtn{
-    width: 200px;
-    height: 50px; 
+    width: 320px;
+    height: 45px; 
     border-radius:30px;
-    font-size: 30px;
+    font-size: 18px;
     font-weight: bolder;
     color: red;
     background-color: white;
