--- a/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.scss
+++ b/src/app/tab2/tokyo-attractions/act-detail/act-detail.page.scss
@@ -1,9 +1,7 @@
-ion-toolbar{
-    --background:#F75C2F
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
    padding-right: 20%;
