--- a/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
+++ b/src/app/tab2/tokyo-attractions/act-detail/shareboard/shareboard.page.scss
@@ -1,13 +1,11 @@
-ion-toolbar{
-    --background:#F75C2F
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
    padding-right: 20%;
-  
+   
 }
 .message{
 padding: 10px;
