--- a/src/app/tab2/tokyo-attractions/tokyo-attractions.page.scss
+++ b/src/app/tab2/tokyo-attractions/tokyo-attractions.page.scss
@@ -1,9 +1,7 @@
-#toolBar{
-    --background:#F75C2F
-}
+
 ion-title{
     text-align: center;
-    color: white;
+    color: #0C0C0C;
     font-weight: bolder;
     font-size:20px;
    padding-right: 20%;
