member page img change

--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -22,9 +22,11 @@ ion-avatar{
     height :100px !important;
 } 
 #travelImg{
-    width: 150px;
+    width: 200px;
     height: 50px;
     margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
     
 }
 .memberBtn{
